subprojects/swen430/src/test/resources/tests/valid/DefiniteAssign_Valid_3.while
int foo(int x) {
    int y;

    if (x == 5) {
        y = 1;
        return y;
    } else {
        return 2;
    }
}

void main() {
    print(foo(5));
}
