subprojects/swen430/src/test/resources/tests/invalid/DefiniteAssign_Invalid_8.while
int f(int x) {
    bool c = y > 0;
    if(c) {
        x = x + 1;
    }
    return x;
}
